VOL-3202 fix spacing around various buttons on internal

--- a/app/cdn/assets/_styles/components/more-actions.scss
+++ b/app/cdn/assets/_styles/components/more-actions.scss
@@ -90,6 +90,7 @@
     a {
       display: block;
       padding: 6px 12px 5px;
+      margin-bottom: 0.5em;
     }
   }
 
